--- a/ankiweb.html
+++ b/ankiweb.html
@@ -1,20 +1,34 @@
-This add-on offers an extended tag editing/adding dialog that shows one tag per line, see the screencast below. You can set different shortcuts for the reviewer (default: "w") and the Add/EditCurrent/Browser window (default: "Alt+Shift+6").
+This add-on offers an extended tag editing/adding dialog that shows one tag per line, see the screencast below. You can open it from the <b>context menu of the editor</b> or by shortcut. You can set different shortcuts for the reviewer (default: "w") and the Add/EditCurrent/Browser window (default: "Alt+Shift+6").
 
-This dialog is especially useful if you have multiple long (hierarchical) tags that don't fit into one line like this one taken from a popular shared deck for med students:
+This dialog is especially useful if you have multiple long (hierarchical) tags like this one taken from a popular shared deck for med students:
 
-<code>#B&B::Endocrinology::Adrenals::Congenital_Adrenal_Hyperplasia #FirstAid::endo::path::adrenal::cah #Pathoma::15_Endocrine::15.10-15.11-Adrenal_Cortex_&_Adrenal_Medulla Endocrine::Pathology</code>
+<code>#B&amp;B::Endocrinology::Adrenals::Congenital_Adrenal_Hyperplasia #FirstAid::endo::path::adrenal::cah #Pathoma::15_Endocrine::15.10-15.11-Adrenal_Cortex_&amp;_Adrenal_Medulla Endocrine::Pathology</code>
 
-<img src="https://raw.githubusercontent.com/Arthur-Milchior/Quick_Tagging/master/screenshots/quick_tagging_in_add_window.gif"> 
+On a small notebook screen the width of the window is too small so that parts of the content is hidden so that I have to put the cursor into the tag line and then go left/right. It's also not immediately clear where a new tag starts - the separating space is lost in a wall of text. That's why I prefer an extra dialog:
 
-<img src="https://raw.githubusercontent.com/Arthur-Milchior/Quick_Tagging/master/screenshots/quick_tagging_in_reviewer.gif"> 
+<img src="https://raw.githubusercontent.com/ijgnd/anki__extended_tag_edit_add_dialog/master/screenshots/new_white.gif"> 
 
-There's also an extended tag insertion dialog in the Add/EditCurrent/Browser window - you can quickly filter your exisiting tags and insert them into the tag bar at the bottom. The default shortcut for this is "Alt+Shift+5"
+There's also an extended tag insertion dialog in the Add/EditCurrent/Browser window - you can quickly filter your exisiting tags and insert them into the tag bar at the bottom. The default shortcut for this is "Alt+Shift+5".
 
-<b># known limitations</b>
-This add-on only partially works with the add-on <a href="https://ankiweb.net/shared/info/1496166067" rel="nofollow">night mode</a>: It only works with night mode released on 2020-01-13 or later and night mode doesn't work on the dialog if it's opened from the reviewer.
+<b># acknowledgements</b>
+/u/BlueGreenMagick improved the handling of non-latin characters. This add-on is based on an idea by /u/AnKingMed who also helped with testing. 
+
+<b># Versions</b>
+- 2020-03-24 removed code for the night-mode add-on
+- 2020-02-20 better support for non-latin characters
+- 2020-01-22 better support for the night-mode add-on by BlueGreenMagick
+- 2020-01-13 initial release
+
+<b># Night Mode Compatibility</b>
+This add-on supports the built-in night mode in Anki versions 2.1.20 or later. The latest version of this add-on does not work with the add-on <a href="https://ankiweb.net/shared/info/1496166067" rel="nofollow">night mode</a> (which is not supported on Anki 2.1.20 anyway). An old version of this add-on worked partially with the add-on night-mode.
 
 <b># bugs</b>
-Please do not use reviews for bug reports or support requests. I don't get notified of your reviews, and properly troubleshooting an issue through them is nearly impossible (formatting is limited and I can't reply multiple times). If you find a bug let me know on <a href="https://github.com/ijgnd/anki__extended_tag_edit_add_dialog/issues" rel="nofollow">github</a> or on reddit (/u/ijgnord).
+Please do not use reviews for bug reports or support requests. I don't get notified of your reviews, and properly troubleshooting an issue through them is nearly impossible (formatting is limited and I can't reply multiple times).  If you find a bug let me know in the <a href="
+https://anki.tenderapp.com/discussions/add-ons/40698-extended-tag-addedit-dialog-official-thread?unresolve=true" rel="nofollow">official anki support forum</a>, on <a href="https://github.com/ijgnd/anki__extended_tag_edit_add_dialog/issues" rel="nofollow">github</a> or on reddit (/u/ijgnord).
 
 <b># Compatibility with other add-ons</b>
+the default shortcut for the reviewer is also used by the add-on <a href="https://ankiweb.net/shared/info/304770511" rel="nofollow">Quick tagging 2.1</a>. If you use both add-ons make sure to change the default shortcut in one of these. Maybe other add-ons also use the "w" in the reviewer.
+
+There are many add-ons that set shortcuts for the editor. If two add-ons set the same shortcut the shortcut doesn't work at all. To avoid such conflicts I deliberately set unusual default shortcuts for the editor ("Alt+Shift+5"/"Alt+Shift+6"). You can adjust them in the config and use easier to type combinations.
+
 The subtag matching from glutanimate's <a href="https://github.com/glutanimate/bettertags-public" rel="nofollow">Bettertags</a> only works if bettertags is loaded before this add-on. E.g. rename the bettertags add-on folder to `1135507716`.
